[gd_scene load_steps=2 format=3 uid="uid://rbvlih3jaros"]

[ext_resource type="Script" uid="uid://4237u1hkupqd" path="res://Components/LevelManager/level_manager.gd" id="1_uiuky"]

[node name="LevelManager" type="Node"]
script = ExtResource("1_uiuky")

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ScoreArea"]

[node name="LoopPolygon" type="Polygon2D" parent="ScoreArea"]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1
